--- a/app/src/main/res/layout/altera_cliente.xml
+++ b/app/src/main/res/layout/altera_cliente.xml
@@ -14,7 +14,7 @@
 
 
         <EditText
-            android:id="@+id/cadastro_nome"
+            android:id="@+id/altera_nome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome"
@@ -25,7 +25,7 @@
              />
 
         <EditText
-            android:id="@+id/cadastro_idade"
+            android:id="@+id/altera_idade"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:hint="Idade"
@@ -35,7 +35,7 @@
             />
 
         <EditText
-            android:id="@+id/cadastro_sexo"
+            android:id="@+id/altera_sexo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Sexo"
@@ -43,21 +43,21 @@
             />
 
         <EditText
-            android:id="@+id/cadastro_altura"
+            android:id="@+id/altera_altura"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Altura"
             android:inputType="numberDecimal"
             />
         <EditText
-            android:id="@+id/cadastro_peso"
+            android:id="@+id/altera_peso"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Peso"
             android:inputType="numberDecimal"
             />
         <EditText
-            android:id="@+id/cadastro_macaddres"
+            android:id="@+id/altera_macaddres"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="MacAddres"
@@ -65,19 +65,13 @@
 
             />
         <EditText
-            android:id="@+id/cadastro_usuario"
+            android:id="@+id/altera_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
             android:inputType="textEmailAddress"
             />
-        <EditText
-            android:id="@+id/cadastro_senha"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Senha"
-            android:inputType="text"
-            />
+
 
 
 
