--- a/app/src/main/res/layout/telainicial_login.xml
+++ b/app/src/main/res/layout/telainicial_login.xml
@@ -5,7 +5,14 @@
     android:background="@drawable/gradient"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-
+    <ProgressBar
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/login_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
     <ImageView
         android:layout_width="150dp"
         android:layout_height="250dp"
@@ -33,9 +40,8 @@
                 android:drawableLeft="@drawable/ic_mail_white_24dp"
                 android:hint="Login"
                 android:inputType="text"
-                android:textColorHint="#FFF"
                 android:textColor="#FFF"
-                />
+                android:textColorHint="#FFF" />
 
         </LinearLayout>
 
@@ -47,21 +53,20 @@
 
             <EditText
                 android:id="@+id/telainicial_senha"
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_lock_white_24dp"
                 android:hint="Senha"
                 android:inputType="textPassword"
-                android:textColorHint="#FFF"
                 android:textColor="#FFF"
-                />
+                android:textColorHint="#FFF" />
+
             <CheckBox
+                android:id="@+id/telainicial_exibirsenha"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Exibir Senha"
-                android:id="@+id/telainicial_exibirsenha"
-                />
+                android:text="Exibir Senha" />
 
 
         </LinearLayout>
@@ -72,6 +77,7 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -86,8 +92,7 @@
                 android:clickable="true"
                 android:gravity="center_horizontal"
                 android:onClick="cadastro"
-                android:text="Não tem conta? Cadastre-se"
-                />
+                android:text="Não tem conta? Cadastre-se" />
 
             <TextView
                 android:id="@+id/telainicial_esqueceusenha"
@@ -97,8 +102,7 @@
                 android:clickable="true"
                 android:gravity="center_horizontal"
                 android:onClick="esqueceusenha"
-                android:text="Esqueceu sua senha?"
-                />
+                android:text="Esqueceu sua senha?" />
 
         </LinearLayout>
 
