--- a/app/src/main/res/layout/cadastro_cliente.xml
+++ b/app/src/main/res/layout/cadastro_cliente.xml
@@ -21,6 +21,10 @@
             android:inputType="text"
              />
 
+        <br.com.impacta.breathmobi.DTEditText
+            android:id="@+id/dt_data_pedido"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/cadastro_idade"
             android:layout_width="55dp"
