--- a/app/src/main/res/layout/cadastro_cliente.xml
+++ b/app/src/main/res/layout/cadastro_cliente.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="15dp"
-        >
+        android:padding="15dp">
 
 
         <EditText
@@ -18,45 +16,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome"
-            android:inputType="text"
-             />
+            android:inputType="text" />
 
-        <br.com.impacta.breathmobi.DTEditText
-            android:id="@+id/dt_data_pedido"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/cadastro_idade"
-            android:layout_width="55dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Idade"
-            android:inputType="date"
+            android:hint="Data Nascimento"
+            android:inputType="date" />
 
+        <!--<Spinner-->
+            <!--android:id="@+id/sp_mf"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
-            />
 
         <EditText
             android:id="@+id/cadastro_sexo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Sexo"
-            android:inputType="text"
-            />
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/cadastro_altura"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Altura"
-            android:inputType="numberDecimal"
-            />
+            android:inputType="numberDecimal" />
+
         <EditText
             android:id="@+id/cadastro_peso"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Peso"
-            android:inputType="numberDecimal"
-            />
+            android:inputType="numberDecimal" />
+
         <EditText
             android:id="@+id/cadastro_macaddres"
             android:layout_width="match_parent"
@@ -65,21 +60,20 @@
             android:inputType="text"
 
             />
+
         <EditText
             android:id="@+id/cadastro_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:inputType="textEmailAddress"
-            />
+            android:inputType="textEmailAddress" />
+
         <EditText
             android:id="@+id/cadastro_senha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Senha"
-            android:inputType="text"
-            />
-
+            android:inputType="text" />
 
 
     </LinearLayout>
