--- a/app/src/main/res/layout/telalogado.xml
+++ b/app/src/main/res/layout/telalogado.xml
@@ -16,4 +16,10 @@
         android:layout_height="wrap_content"
         android:text="Logout" />
 
+    <Button
+        android:id="@+id/btn_logado_editarcliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="editarCliente" />
+
 </LinearLayout>
