Editar WS - Perfil
tela e Script de edição do perfil com firebase

--- a/app/src/main/res/layout/altera_cliente.xml
+++ b/app/src/main/res/layout/altera_cliente.xml
@@ -1,97 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dp"
+    android:background="@color/colorPrimary"
+    >
 
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="15dp">
+        android:background="@drawable/border_perfil"
+        >
 
-
-        <EditText
-            android:id="@+id/altera_nome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nome"
-            android:inputType="text"
-
-            />
-
-        <EditText
-            android:id="@+id/altera_idade"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Data Nascimento"
-            android:inputType="number"
-
-
-            />
-
-        <EditText
-            android:id="@+id/altera_sexo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Sexo"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/altera_altura"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Altura"
-            android:inputType="numberDecimal" />
-
-        <EditText
-            android:id="@+id/altera_peso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Peso"
-            android:inputType="numberDecimal" />
-
-        <EditText
-            android:id="@+id/altera_macaddres"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="MacAddres"
-            android:inputType="text"
-
-            />
-
-        <EditText
-            android:id="@+id/altera_usuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email"
-            android:inputType="textEmailAddress" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="#FFF"
+                android:src="@drawable/perfil1" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF"
+            android:orientation="vertical"
+            android:padding="20dp"
 
             >
 
-            <Button
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/altera_nome"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Cancelar" />
+                android:hint="Nome"
+                android:inputType="text"
+                android:lines="@android:integer/config_longAnimTime"
+                android:textAlignment="center"
 
 
-            <Button
-                android:layout_width="wrap_content"
+
+                />
+
+            <EditText
+                android:id="@+id/altera_idade"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Alterar"
-                android:id="@+id/alterar_btn_alterar"
+                android:hint="Data Nascimento"
+                android:inputType="number"
+                android:textAlignment="center"
+
+                />
+
+            <EditText
+                android:id="@+id/altera_sexo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Sexo"
+                android:inputType="text"
+                android:textAlignment="center"
+
+                />
+
+            <EditText
+                android:id="@+id/altera_altura"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Altura"
+                android:inputType="numberDecimal"
+                android:textAlignment="center"
+
+                />
+
+            <EditText
+                android:id="@+id/altera_peso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Peso"
+                android:inputType="numberDecimal"
+                android:textAlignment="center"
+
+                />
+
+            <EditText
+                android:id="@+id/altera_macaddres"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="MacAddres"
+                android:inputType="text"
+                android:textAlignment="center"
 
                 />
 
         </LinearLayout>
 
 
+
     </LinearLayout>
-</ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/alterar_btn_alterar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/border_button_alterar"
+            android:text="Alterar"
+            android:textColor="#FFF"
+            android:textSize="15sp"
+            />
+
+    </LinearLayout>
+</LinearLayout>
