--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,5 +14,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
+    <!-- Theme Perfil. -->
+    <style name="AppTheme.Perfil" parent="AppTheme">
+        <item name="colorAccent">@color/colorLightPimaryColor</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:focusable">false</item>
+
+    </style>
 
 </resources>
