--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,19 +8,28 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+
     <!-- Theme Login. -->
-    <style name="AppTheme.Login" parent="AppTheme">
+    <style name="AppTheme.Login" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorLightPimaryColor</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
     <!-- Theme Perfil. -->
-    <style name="AppTheme.Perfil" parent="AppTheme">
+    <style name="AppTheme.Perfil" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorLightPimaryColor</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:textAlignment">center</item>
         <item name="android:focusable">false</item>
+
+    </style>
+    <style name="AppTheme.teste" parent="MaterialDrawerTheme.Light.DarkToolbar.TranslucentStatus">
+        <item name="colorAccent">@color/colorLightPimaryColor</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+
 
     </style>
 
