--- a/app/src/main/res/layout/frag_testealcool.xml
+++ b/app/src/main/res/layout/frag_testealcool.xml
@@ -5,14 +5,52 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
-    android:background="@color/colorPrimary"
+    android:gravity="center_horizontal"
     >
-
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TesteAlcool"
-    />
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Realizar Teste!"
+            android:textSize="25sp"
+
+            />
+
+        <Button
+            android:layout_marginTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_blue"
+            android:id="@+id/btn_testealcool_realizar"
+
+
+            />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/testealcool_qtd"
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"
+            />
+
+
+    </LinearLayout>
+
+
+
 
 
     </LinearLayout>
