--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#FF5252</color>
     <color name="colorLightPimaryColor">#B3E5FC</color>
+    <color name="colorWhite">#FFF</color>
 </resources>
