--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,32 +5,36 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorLightPimaryColor</item>
+
     </style>
 
 
 
     <!-- Theme Login. -->
-    <style name="AppTheme.Login" parent="Theme.AppCompat">
+    <style name="AppTheme.Login" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorLightPimaryColor</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
     <!-- Theme Perfil. -->
-    <style name="AppTheme.Perfil" parent="Theme.AppCompat">
+    <style name="AppTheme.Perfil" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorLightPimaryColor</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 
     </style>
-    <!--<style name="AppTheme.teste" parent="MaterialDrawerTheme.Light.DarkToolbar.TranslucentStatus">-->
-        <!--<item name="colorAccent">@color/colorLightPimaryColor</item>-->
-        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+
+    <style name="ProgressBar" parent="Theme.AppCompat.Light">
+        <item name="android:background">#7BC047</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:windowFrame">@null</item>
+    </style>
 
 
 
-    <style name="AppTheme.logado" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.Logado" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="colorAccent">@color/colorLightPimaryColor</item>
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
